<resources>
    <string name="app_name">carlog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fueling_date">Fueling Date:</string>
    <string name="full_fueling">Full Fueling</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="odometer">Odometer</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="type">Type</string>
    <string name="produce_date">Produce Date:</string>
    <string name="does_it_have_oil_change">Does it have oil change?</string>
    <string name="service_type">Service Type</string>
    <string name="service_description">Service Description</string>
    <string name="description">Description</string>
    <string name="service_date">Service Date:</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="odometer_km">Odometer km</string>
    <string name="odometer_km">Odometer km</string>
    <string name="quantity_l">Quantity l</string>
    <string name="l_100km">l/100km</string>
</resources>